fixed project page title being covered by description

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1012,7 +1012,7 @@ body.dark .form-feedback.error {
 
     letter-spacing: -0.02em;
 
-    margin-bottom: 1rem;
+    margin-bottom: 150px
 }
 
 /* =========================
